--- a/web/templates/base2.html
+++ b/web/templates/base2.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Hotel Pacific Reef</title>
+    <title>Hotel San Francisco</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -195,58 +195,9 @@
           }, 500);
         }
       </script>
-      <!-- Carousel Start -->
-      <div class="container-fluid p-0 mb-5">
-        <div
-          id="header-carousel"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                class="w-100"
-                src="{% static 'img/car1.jpg' %}"
-                alt="Image"
-              />
-
-              <div
-                class="carousel-caption d-flex flex-column align-items-center justify-content-center"
-              >
-                <div class="p-3" style="max-width: 700px">
-                  <h6
-                    class="section-title text-white text-uppercase mb-3 animated slideInDown"
-                  >
-                    Sistema de Administracion
-                  </h6>
-                  <h1 class="display-3 text-white mb-4 animated slideInDown">
-                    Hotel San Francisco
-                  </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#header-carousel"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#header-carousel"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-      <!-- Carousel End -->
+      
+      
+      
       {% block contenido %} {% endblock contenido %}
 
       <!-- Back to Top -->
