--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -80,7 +80,7 @@
               <div class="col-lg-8 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-2 me-4">
                   <i class="fa fa-envelope text-primary me-2"></i>
-                  <p class="mb-0">info@hpr.com</p>
+                  <p class="mb-0">fre.camposo@profesor.duoc.cl</p>
                 </div>
 
                 <div class="h-100 d-inline-flex align-items-center py-2">
